--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/coolout-removebg-preview.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CoolOut_AdminPanel</title>
+    <title>CoolOut Admin Panel</title>
   </head>
   <body>
     <div id="root"></div>
